--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -1351,4 +1351,4 @@ xxl
 	    .text-align-right-xs { text-align: right !important; }
 	    .text-align-center-xs { text-align: center !important; }
     }
-/* Helper classes 
+/* Helper classes */
