--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -4478,6 +4478,7 @@ a.btn-back-to-cat:hover {
 
 .sticker_discount {
     font-size:20px;
+    background-color:#f17e46;
 }
 .sticker_20, .sticker_22, .sticker_23, .sticker_24{
     font-size:11px !important;
